# Solana-Geyser-Plugin-for-ClickHouse

./: Cargo.toml  README.md  config.json  docker-compose.yaml  run_ch.sh
db_docs/: basic.md
scripts/: create_schema.sql
src/: clickhouse_client.rs  geyser_plugin_clickhouse.rs  lib.rs  worker.rs
