[package]
name = "solana-geyser-clickhouse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clickhouse-rs = { version = "1.1.0-alpha.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.13"
solana-geyser-plugin-interface = "1.18.26"