[package]
name = "solana-geyser-clickhouse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.13"
agave-geyser-plugin-interface = "2.1.16"
solana-sdk = "2.1.16"
clickhouse = { version = "0.13.1", features = ["time"] }
hex = "0.4"
thiserror = "1.0.37"
chrono = "0.4"